--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
 rand_core = { version = "0.6", default-features = false }
 rand_chacha = "0.3"
 prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }
+hex = "0.4"
 
 # [patch."https://github.com/privacy-scaling-explorations/halo2.git"]
 # halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
